<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_create_account">Register</string>
    <string name="hint_username">username</string>
    <string name="txt_go_login">login</string>
    <string name="btn_register">register</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="toolbar_title_home">Start</string>
</resources>
